--- a/less/block/_order-btn.less
+++ b/less/block/_order-btn.less
@@ -15,6 +15,7 @@
 	font-size: 30px;
 	text-transform: uppercase;
 	background-color: @background;
+	border-radius: 5px;
 	transition: background-color .7s;
 
 	&:hover {
