--- a/less/section/_sidebar.less
+++ b/less/section/_sidebar.less
@@ -1,9 +1,9 @@
 .sidebar {
 	display: none;
 	position: absolute;
-	top: 40px;
+	top: 0;
 	right: 0;
-	bottom: 40px;
+	bottom: 0;
 	width: 270px;
 	float: left;
 	background-color: @background;
