--- a/less/block/_circle.less
+++ b/less/block/_circle.less
@@ -18,6 +18,7 @@
 	}
 
 	@media (min-width: 1200px) {
+		margin-top: 100px;
 		width: 350px;
 		height: 350px;
 	}
@@ -189,6 +190,9 @@
 	vertical-align: middle;
 	background-color: #fff;
 	border-radius: 50%;
+	overflow: hidden;
+	margin-left: 5px;
+	margin-right: 5px;
 
 	@media (min-width: 768px) {
 		width: 60px;
