--- a/less/block/_promo.less
+++ b/less/block/_promo.less
@@ -36,7 +36,7 @@
 		}
 	}
 
-	&__heading {
+	&__content {
 		padding: 18px 5px;
 		
 		@media (min-width: 567px) {
@@ -46,38 +46,38 @@
 
 		@media (min-width: 992px) {
 			width: 430px;
-
-		}
-
-		&-title {
-			color: @text;
-			font-size: 18px;
-			font-weight: bold;
-
-			@media (min-width: 567px) {
-				font-size: 16px;
-			}
-
-			@media (min-width: 992px) {
-				font-size: 18px;
-			}
-		}
-
-		&-desc {
-			margin-top: 6px;
-			color: @text;
-			font-size: 18px;
-			line-height: 22px;
-
-			@media (min-width: 567px) {
-				font-size: 14px;
-			}
-
-			@media (min-width: 992px) {
-				font-size: 18px;
-			}
 		}
 	}
+
+	&__title {
+		color: @text;
+		font-size: 18px;
+		font-weight: bold;
+
+		@media (min-width: 567px) {
+			font-size: 16px;
+		}
+
+		@media (min-width: 992px) {
+			font-size: 18px;
+		}
+	}
+
+	&__text {
+		margin-top: 6px;
+		color: @text;
+		font-size: 18px;
+		line-height: 22px;
+
+		@media (min-width: 567px) {
+			font-size: 14px;
+		}
+
+		@media (min-width: 992px) {
+			font-size: 18px;
+		}
+	}
+
 	&__socials {
 		width: 100%;
 		padding-top: 14px;
