--- a/less/general/_container.less
+++ b/less/general/_container.less
@@ -2,6 +2,8 @@
 	max-width: 300px;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
+	
 	@media (min-width: 567px) {
 		max-width: 540px;
 	}
