--- a/less/general/_section.less
+++ b/less/general/_section.less
@@ -1,6 +1,9 @@
 .section {
 	padding-top: 33px;
 	padding-bottom: 100px;
-	position: relative;
-	overflow: hidden;
+	
+	&--footer {
+		padding-top: 140px;
+		padding-bottom: 140px;
+	}
 }
