--- a/less/section/_footer.less
+++ b/less/section/_footer.less
@@ -1,15 +1,9 @@
 .footer {
 	background-color: @footer;
-	height: 300px;
-	position: relative;
-	white-space: nowrap;
 
 	.copyright {
 		font-family: @additional;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		text-align: center;
 		font-size: 13px;
 		color: @text;
 	}
